--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -366,14 +366,48 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**回答:**  \n",
-    "这三个样本点分别代表餐馆、超市、咖啡馆,\n",
-    "22的记占得最大的量是新鲜产品，接下来是冷藏的食物，猜测是一家餐馆；  \n",
-    "171的记录是新鲜商品占和冷藏食物占比最少，猜测是超市；  \n",
-    "187记录是杂货和牛奶比较多，猜测是咖啡馆"
+    "结合上面的统计信息，可看出：  \n",
+    "22记录的各个特征所在区间：\n",
+    " - Fresh位于<font color=red>75%~100%</font>；\n",
+    " - Milk位于25%~50%；\n",
+    " - Grocery位于25%~50%；\n",
+    " - Frozen位于<font color=red>75%~100%</font>；\n",
+    " - Detergents_Paper位于50%~75%；\n",
+    " - Delicatessen位于<font color=red>75%~100%</font>；\n",
+    "\n",
+    "171记录的各个特征所在区间：\n",
+    " - Fresh位于0%分~25%；\n",
+    " - Milk位于<font color=red>75%~100%</font>；\n",
+    " - Grocery位于<font color=red>75%~100%</font>；\n",
+    " - Frozen位于0%~25%；\n",
+    " - Detergents_Paper位于<font color=red>75%~100%</font>；\n",
+    " - Delicatessen位于<font color=red>75%~100%</font>；\n",
+    " \n",
+    "187记录的各个特征所在区间：\n",
+    " - Fresh位于0%分~25%；\n",
+    " - Milk位于<font color=red>75%~100%</font>；\n",
+    " - Grocery位于50%~75%；\n",
+    " - Frozen位于<font color=red>75%~100%</font>；\n",
+    " - Detergents_Paper位于50%~75%；\n",
+    " - Delicatessen位于0%~25%(并且是最小值)；\n",
+    "\n",
+    "\n",
+    "22记录的Fresh、Frozen、Delicatessen三者都在75%~100%区间中；  \n",
+    "171记录的Milk、Grocery、Detergents_Paper、Delicatessen四者都位于75%~100%区间中；  \n",
+    "187记录的Milk、Frozen位于75%~100%之间。\n",
+    "\n",
+    "\n",
+    "22记录的特点是所有事物的类型都在75%~100%区间，猜测是一家餐馆；  \n",
+    "171记录的Milk、Grocery、Detergents_Paper、Delicatessen都在75%~100%区间内，而且新鲜商品占和冷藏食物占比最少，猜测是超市；  \n",
+    "187记录的Milk、Frozen75%~100%，猜测是咖啡馆\n",
+    "\n",
+    "\n",
+    "这三个样本点分别代表餐馆、超市、咖啡馆, "
    ]
   },
   {
@@ -1893,7 +1927,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.mixture import GaussianMixture\n",
@@ -2145,6 +2181,32 @@
    "metadata": {},
    "source": [
     "**回答:**  \n",
+    "\n",
+    "各个特征对于两个segment的特征所在的区间：  \n",
+    "Fresh\n",
+    " - segment 0：50%~100%，\n",
+    " - setment 1：0% ~50%,\n",
+    " \n",
+    "Milk\n",
+    " - segment 0：0%~50%，\n",
+    " - setment 1：50%~100%,\n",
+    " \n",
+    "Grocery\n",
+    " - segment 0：0%~50%，\n",
+    " - setment 1：50%~100%,\n",
+    "\n",
+    "Frozen\n",
+    " - segment 0：50%~100%，\n",
+    " - setment 1：0%~50%,\n",
+    "\n",
+    "Detergents_Paper\n",
+    " - segment 0：0%~50%，\n",
+    " - setment 1：50%~100%,\n",
+    " \n",
+    "Delicatessen\n",
+    " - segment 0：0%~50%，\n",
+    " - setment 1：50%~100%,\n",
+    "\n",
     "segment 0 主要消费点在Fresh、Milk、Frozen，这部分特点是食物，这类别代表是餐馆类客户；  \n",
     "segment 1 的消费点在Grocery、Milk、Detergents_Paper这部分特点是可以存放久的，这类别代表超市性客户。"
    ]
